# wordSegCode

ver01/: CMakeLists.txt  FeatureComputer.cpp~  HandDetector.cpp  HandDetector.cpp~  HandDetector.hpp  main.cpp  main.cpp~  rectprior.cpp~  rectprior.h
ver01/models/txt/: hsv_histogram_0.xml  hsv_histogram_12.xml  hsv_histogram_13.xml  hsv_histogram_14.xml  hsv_histogram_15.xml  hsv_histogram_16.xml  hsv_histogram_17.xml  hsv_histogram_19.xml  hsv_histogram_2.xml  hsv_histogram_21.xml  hsv_histogram_22.xml  hsv_histogram_23.xml  hsv_histogram_24.xml  hsv_histogram_25.xml  hsv_histogram_26.xml  hsv_histogram_27.xml  hsv_histogram_28.xml  hsv_histogram_3.xml  hsv_histogram_4.xml  hsv_histogram_6.xml  hsv_histogram_7.xml  hsv_histogram_9.xml
ver01/models/txt1/: model_Documents_rb_10_rdtr.xml  model_Documents_rb_11_rdtr.xml  model_Documents_rb_12_rdtr.xml  model_Documents_rb_13_rdtr.xml  model_Documents_rb_14_rdtr.xml  model_Documents_rb_15_rdtr.xml  model_Documents_rb_16_rdtr.xml  model_Documents_rb_17_rdtr.xml  model_Documents_rb_18_rdtr.xml  model_Documents_rb_19_rdtr.xml  model_Documents_rb_1_rdtr.xml  model_Documents_rb_20_rdtr.xml  model_Documents_rb_21_rdtr.xml  model_Documents_rb_22_rdtr.xml  model_Documents_rb_23_rdtr.xml  model_Documents_rb_24_rdtr.xml  model_Documents_rb_25_rdtr.xml  model_Documents_rb_26_rdtr.xml  model_Documents_rb_27_rdtr.xml  model_Documents_rb_28_rdtr.xml  model_Documents_rb_29_rdtr.xml  model_Documents_rb_2_rdtr.xml  model_Documents_rb_3_rdtr.xml  model_Documents_rb_4_rdtr.xml  model_Documents_rb_5_rdtr.xml  model_Documents_rb_6_rdtr.xml  (+3 more)
(+72 files in other folders)
