PROJECT(githublbp)
SET(CMAKE_BUILD_TYPE Release)
CMAKE_MINIMUM_REQUIRED( VERSION 2.6 )
FIND_PACKAGE( OpenCV REQUIRED )
ADD_EXECUTABLE(docSeg main.cpp Classifier.cpp  FeatureComputer.cpp  HandDetector.cpp  LcBasic.cpp GCoptimization.cpp LinkedBlockList.cpp rectprior.cpp)
TARGET_LINK_LIBRARIES(docSeg ${OpenCV_LIBS} )
